--- a/manifest.yaml
+++ b/manifest.yaml
@@ -5,7 +5,7 @@ name: file-review-plugins
 label:
   en_US: file-review-plugins
   ja_JP: file-review-plugins
-  zh_Hans: 文档评估插件
+  zh_Hans: 文档审查插件
   pt_BR: file-review-plugins
 description:
   en_US: 文档审查插件
