--- a/manifest.yaml
+++ b/manifest.yaml
@@ -21,11 +21,11 @@ resource:
     model:
       enabled: true
       llm: true
-      text_embedding: false
-      rerank: false
-      tts: false
-      speech2text: false
-      moderation: false
+      text_embedding: true
+      rerank: true
+      tts: true
+      speech2text: true
+      moderation: true
 
 plugins:
   tools:
